ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment3/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment3/input.ts:1:14
  |
1 | var v = { "" };
  |              ^

